--- a/arch/arm/dts/imx8mm-nitrogen8mm_rev2.dts
+++ b/arch/arm/dts/imx8mm-nitrogen8mm_rev2.dts
@@ -1,15 +1,6 @@
+// SPDX-License-Identifier: (GPL-2.0+ OR MIT)
 /*
- * Copyright 2018 NXP
- *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * Copyright 2018 Boundary Devices
  */
 
 #include "imx8mm-nitrogen8mm.dts"
@@ -19,6 +10,17 @@
 	compatible = "boundary,imx8mm-nitrogen8mm_rev2", "fsl,imx8mm";
 };
 
+#if 0
+&A53_0 {
+	arm-supply = <&reg_sw3>;
+};
+
+&reg_sw4 {
+	/delete-property/ dual-phase;
+};
+#endif
+
 &wdog1 {
 	/delete-property/ reset-gpios;
+	/delete-property/ pinctrl-1;
 };
