--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -69,6 +69,11 @@ config TARGET_SON
 	select IMX8MQ
 	select SUPPORT_SPL
 
+config TARGET_SPAN
+	bool "span"
+	select IMX8MM
+	select SUPPORT_SPL
+
 config TARGET_IMX8MM_EVK
 	bool "imx8mm_evk"
 	select IMX8MM
@@ -107,5 +112,6 @@ source "board/boundary/nitrogen8m_som/Kconfig"
 source "board/boundary/nitrogen8mm/Kconfig"
 source "board/boundary/nitrogen8mm_som/Kconfig"
 source "board/boundary/son/Kconfig"
+source "board/boundary/span/Kconfig"
 source "board/freescale/imx8mm_evk/Kconfig"
 endif
