nitrogen6sx: add  CONFIG_SPI_FLASH_GIGADEVICE: to defconfigs
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/configs/nitrogen6sx_defconfig
+++ b/configs/nitrogen6sx_defconfig
@@ -1,11 +1,12 @@
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
 CONFIG_TARGET_NITROGEN6SX=y
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/boundary/nitrogen6sx/imximage.cfg,MX6SX,DDR_MB=1024,DEFCONFIG=\"nitrogen6sx\""
 CONFIG_IMX_BOOTAUX=y
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/boundary/nitrogen6sx/imximage.cfg,MX6SX,DDR_MB=1024,DEFCONFIG=\"nitrogen6sx\""
 # CONFIG_CMD_IMLS is not set
 # CONFIG_CMD_FLASH is not set
 CONFIG_CMD_GPIO=y
 CONFIG_SPI_FLASH=y
+CONFIG_SPI_FLASH_GIGADEVICE=y
 CONFIG_SPI_FLASH_SPANSION=y
 CONFIG_SPI_FLASH_SST=y
