--- a/arch/arm/dts/imx6qdl-sabrelite.dtsi
+++ b/arch/arm/dts/imx6qdl-sabrelite.dtsi
@@ -39,11 +39,29 @@
 			MX6QDL_PAD_RGMII_RD2__RGMII_RD2		0x1b0b0
 			MX6QDL_PAD_RGMII_RD3__RGMII_RD3		0x1b0b0
 			MX6QDL_PAD_RGMII_RX_CTL__RGMII_RX_CTL	0x1b0b0
-#undef GP_ENET_PHY_RESET
-#define GP_ENET_PHY_RESET	<&gpio3 23 GPIO_ACTIVE_LOW>
+#define GP_ENET_PHY_RESET_NITROGEN6X	<&gpio1 27 GPIO_ACTIVE_LOW>
+			MX6QDL_PAD_ENET_RXD0__GPIO1_IO27	0x030b0
+#define GP_ENET_PHY_RESET_SABRELITE	<&gpio3 23 GPIO_ACTIVE_LOW>
 			MX6QDL_PAD_EIM_D23__GPIO3_IO23		0x030b0
 #define GPIRQ_ENET_PHY		<&gpio1 28 IRQ_TYPE_LEVEL_LOW>
 			MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0x1b0b0
+		>;
+	};
+
+	pinctrl_enet_reset: enet-resetgrp {
+		fsl,pins = <
+			/* pin 35 - 1 (PHY_AD2) on reset */
+			MX6QDL_PAD_RGMII_RXC__GPIO6_IO30	0x1b0b0
+			/* pin 32 - 1 - (MODE0) all */
+			MX6QDL_PAD_RGMII_RD0__GPIO6_IO25	0x1b0b0
+			/* pin 31 - 1 - (MODE1) all */
+			MX6QDL_PAD_RGMII_RD1__GPIO6_IO27	0x1b0b0
+			/* pin 28 - 1 - (MODE2) all */
+			MX6QDL_PAD_RGMII_RD2__GPIO6_IO28	0x1b0b0
+			/* pin 27 - 1 - (MODE3) all */
+			MX6QDL_PAD_RGMII_RD3__GPIO6_IO29	0x1b0b0
+			/* pin 33 - 1 - (CLK125_EN) 125Mhz clockout enabled */
+			MX6QDL_PAD_RGMII_RX_CTL__GPIO6_IO24	0x1b0b0
 		>;
 	};
 
@@ -272,11 +290,13 @@
 &fec {
 	phy-handle = <&ethphy>;
 	phy-mode = "rgmii";
-#if 0
-	phy-reset-gpios = GP_ENET_PHY_RESET;
-#endif
-	pinctrl-names = "default";
+	phy-reset-gpios = GP_ENET_PHY_RESET_SABRELITE,
+			GP_ENET_PHY_RESET_NITROGEN6X;
+	phy-reset-duration = <20>;
+	phy-reset-post-delay = <1>;
+	pinctrl-names = "default", "reset";
 	pinctrl-0 = <&pinctrl_enet>;
+	pinctrl-1 = <&pinctrl_enet_reset>;
 	rxc-skew-ps = <3000>;
 	rxd0-skew-ps = <0>;
 	rxd1-skew-ps = <0>;
@@ -297,6 +317,8 @@
 
 		ethphy: ethernet-phy {
 			interrupts-extended = GPIRQ_ENET_PHY;
+			/* scan phy 4,5,6,7 */
+			phy-mask = <0xf0>;
 		};
 	};
 };
