boundary: common: add DEFAULT_DISPLAY_TM070JDHG30
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/board/boundary/common/Kconfig
+++ b/board/boundary/common/Kconfig
@@ -49,6 +49,9 @@ config DEFAULT_HITACHI_HVGA
 config DEFAULT_DISPLAY_PM9598
 	bool "PM9598 display as default"
 
+config DEFAULT_DISPLAY_TM070JDHG30
+	bool "TM070JDHG30 (Tianma) display as default"
+
 config DEFAULT_DISPLAY_WXGA
 	bool "WXGA display as default"
 
