--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -40,8 +40,8 @@ config TARGET_MOO
 	select IMX8MM
 	select SUPPORT_SPL
 
-config TARGET_NITROGEN8_2ETH
-	bool "nitrogen8_2eth"
+config TARGET_NITROGEN8_NANO
+	bool "nitrogen8_nano"
 	select SUPPORT_SPL
 
 config TARGET_NITROGEN8M
@@ -106,7 +106,7 @@ source "board/boundary/bio/Kconfig"
 source "board/boundary/dwe/Kconfig"
 source "board/boundary/hl8mm/Kconfig"
 source "board/boundary/moo/Kconfig"
-source "board/boundary/nitrogen8_2eth/Kconfig"
+source "board/boundary/nitrogen8_nano/Kconfig"
 source "board/boundary/nitrogen8m/Kconfig"
 source "board/boundary/nitrogen8m_som/Kconfig"
 source "board/boundary/nitrogen8mm/Kconfig"
