--- a/configs/nitrogen8_nano_8mn1gr0_defconfig
+++ b/configs/nitrogen8_nano_8mn1gr0_defconfig
@@ -6,7 +6,7 @@ CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_SYS_MALLOC_F_LEN=0x2000
 CONFIG_IMX8MN=y
-CONFIG_TARGET_NITROGEN8_2ETH=y
+CONFIG_TARGET_NITROGEN8_NANO=y
 CONFIG_DDR_RANK_BITS=0
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
@@ -15,14 +15,14 @@ CONFIG_SPL=y
 CONFIG_DEBUG_UART_BASE=0x30860000
 CONFIG_DEBUG_UART_CLOCK=25000000
 CONFIG_SPL_IMX_ROMAPI_LOADADDR=0x48000000
-CONFIG_DEFAULT_DEVICE_TREE="imx8mn-nitrogen8_2eth"
+CONFIG_DEFAULT_DEVICE_TREE="imx8mn-nitrogen8_nano"
 CONFIG_DEBUG_UART=y
 CONFIG_DISTRO_DEFAULTS=y
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_FIT=y
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg,DDR_MB=1024,DEFCONFIG=\"nitrogen8_2eth_8mn1gr0\""
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg,DDR_MB=1024,DEFCONFIG=\"nitrogen8_nano_8mn1gr0\""
 CONFIG_BOOTSTAGE_STASH_SIZE=4096
 CONFIG_ARCH_MISC_INIT=y
 CONFIG_SPL_TEXT_BASE=0x912000
