--- a/configs/nitrogen8mm_som_2gr0_defconfig
+++ b/configs/nitrogen8mm_som_2gr0_defconfig
@@ -22,6 +22,7 @@ CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg,DDR_MB=2048,DEFCONFIG=\"nitrogen8mm_som_2gr0\""
 CONFIG_BOOTSTAGE_STASH_SIZE=4096
+CONFIG_SYS_CONSOLE_OVERWRITE_ROUTINE=y
 CONFIG_ARCH_MISC_INIT=y
 CONFIG_SPL_TEXT_BASE=0x7E1000
 CONFIG_SPL_BOARD_INIT=y
