--- a/board/boundary/nitrogen8m_som/Makefile
+++ b/board/boundary/nitrogen8m_som/Makefile
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier:      GPL-2.0+
 #
 
-obj-y += nitrogen8m_som.o mmc.o
+obj-y += nitrogen8m_som.o
 
 ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
