--- a/configs/nitrogen8_nano_8mn1gr0_defconfig
+++ b/configs/nitrogen8_nano_8mn1gr0_defconfig
@@ -24,6 +24,7 @@ CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg,DDR_MB=1024,DEFCONFIG=\"nitrogen8_nano_8mn1gr0\""
 CONFIG_BOOTSTAGE_STASH_SIZE=4096
+CONFIG_SYS_CONSOLE_OVERWRITE_ROUTINE=y
 CONFIG_ARCH_MISC_INIT=y
 CONFIG_SPL_TEXT_BASE=0x912000
 CONFIG_SPL_BOARD_INIT=y
