boundary: common: move lpddr4 to common directory
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/board/boundary/common/Kconfig
+++ b/board/boundary/common/Kconfig
@@ -73,3 +73,7 @@ config EXTRA_ENV_SETTINGS_DEFCONFIG
 
 config USB_BOOT_FIRST
 	bool "Try booting from USB before mmc/sata"
+
+config CONFIG_LPDDR4_AB
+	bool "Channel A to A, B to B"
+	default y if TARGET_DWE
