--- a/board/boundary/common/Kconfig
+++ b/board/boundary/common/Kconfig
@@ -77,3 +77,8 @@ config USB_BOOT_FIRST
 config CONFIG_LPDDR4_AB
 	bool "Channel A to A, B to B"
 	default y if TARGET_DWE
+
+config DDR_RANK_BITS
+	int "ddr rank bits"
+	depends on ARCH_IMX8M
+	default 1
