boundary: common: add lpddr4_timing_8mm_ch1.c
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/board/boundary/common/Kconfig
+++ b/board/boundary/common/Kconfig
@@ -82,3 +82,8 @@ config DDR_RANK_BITS
 	int "ddr rank bits"
 	depends on ARCH_IMX8M
 	default 1
+
+config DDR_CHANNEL_CNT
+	int "ddr channel count"
+	depends on ARCH_IMX8M
+	default 2
