--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -446,4 +446,11 @@ config SPL_POWER_I2C
 	  Not to be used for new designs and existing ones should be moved to
 	  the new PMIC interface based on driver model.
 
+config POWER_FUSB302
+	bool "Fairchild FUSB302 Type-C chip driver"
+	help
+	  The Fairchild FUSB302 Type-C chip driver that works with
+	  Type-C Port Controller Manager to provide USB PD and USB
+	  Type-C functionalities.
+
 endif
