add script cmd similar with source or autoscr and cfgload
Signed-off-by: yan <yan-wyb@foxmail.com>

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -2427,4 +2427,10 @@ config CMD_KHADAS_KBI
 	help
 	  Khadas Bootloader Instructions
 
+config CMD_SCRIPT
+	bool "simple plain script run from mem without mkimage wrappers"
+	default y
+	help
+	  simple plain script run from mem without mkimage wrappers
+
 endmenu
