--- a/configs/khadas-vim2_defconfig
+++ b/configs/khadas-vim2_defconfig
@@ -12,6 +12,10 @@ CONFIG_IDENT_STRING=" khadas-vim2"
 CONFIG_DEBUG_UART=y
 CONFIG_SYS_LOAD_ADDR=0x1000000
 CONFIG_OF_BOARD_SETUP=y
+CONFIG_AUTOBOOT_KEYED=y
+CONFIG_AUTOBOOT_PROMPT="Hit SPACE in %d seconds to stop autoboot"
+CONFIG_AUTOBOOT_DELAY_STR="2"
+CONFIG_AUTOBOOT_STOP_STR=" "
 CONFIG_USE_PREBOOT=y
 # CONFIG_SYS_DEVICE_NULLDEV is not set
 # CONFIG_DISPLAY_CPUINFO is not set
