--- a/configs/khadas-vim2_defconfig
+++ b/configs/khadas-vim2_defconfig
@@ -93,3 +93,8 @@ CONFIG_VIDEO_MESON=y
 CONFIG_LZO=y
 CONFIG_ZSTD=y
 CONFIG_OF_LIBFDT_OVERLAY=y
+CONFIG_VIDEO_BMP_GZIP=y
+CONFIG_VIDEO_BMP_RLE8=y
+CONFIG_BMP_16BPP=y
+CONFIG_BMP_24BPP=y
+CONFIG_BMP_32BPP=y
