--- a/drivers/phy/Makefile
+++ b/drivers/phy/Makefile
@@ -27,3 +27,4 @@ obj-$(CONFIG_PHY_DA8XX_USB) += phy-da8xx-usb.o
 obj-$(CONFIG_PHY_MTK_TPHY) += phy-mtk-tphy.o
 obj-$(CONFIG_PHY_MIXEL_MIPI_DPHY) += phy-core-mipi-dphy.o phy-fsl-imx8-mipi-dphy.o
 obj-$(CONFIG_PHY_IMX8MP_LVDS) += phy-fsl-imx8mp-lvds.o
+obj-$(CONFIG_PHY_SAMSUNG_HDMI) += phy-fsl-samsung-hdmi.o phy-fsl-samsung-hdmi-clk.o
