reset: reset-imx-hdmimix: initial addition
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/drivers/reset/Kconfig
+++ b/drivers/reset/Kconfig
@@ -180,4 +180,8 @@ config RESET_DISPMIX
 	default n
 	help
 	  Support for reset controller on i.MX8M SoCs.
+
+config RESET_IMX_HDMIMIX
+	bool
+
 endmenu
