--- a/board/boundary/common/mx6/ddr-setup.cfg
+++ b/board/boundary/common/mx6/ddr-setup.cfg
@@ -34,51 +34,71 @@
 #define MDMISC(reg, val, val_gate) DATA 4, reg, val_gate
 #endif
 
-DATA 4, MX6_IOM_DRAM_SDQS0, 0x00000030
-DATA 4, MX6_IOM_DRAM_SDQS1, 0x00000030
-R_BW_32(MX6_IOM_DRAM_SDQS2, 0x00000030)
-R_BW_32(MX6_IOM_DRAM_SDQS3, 0x00000030)
-R_BW_32(MX6_IOM_DRAM_SDQS4, 0x00000030)
-R_BW_32(MX6_IOM_DRAM_SDQS5, 0x00000030)
-R_BW_32(MX6_IOM_DRAM_SDQS6, 0x00000030)
-R_BW_32(MX6_IOM_DRAM_SDQS7, 0x00000030)
-
-DATA 4, MX6_IOM_GRP_B0DS, 0x00000030
-DATA 4, MX6_IOM_GRP_B1DS, 0x00000030
-R_BW_32(MX6_IOM_GRP_B2DS, 0x00000030)
-R_BW_32(MX6_IOM_GRP_B3DS, 0x00000030)
-R_BW_32(MX6_IOM_GRP_B4DS, 0x00000030)
-R_BW_32(MX6_IOM_GRP_B5DS, 0x00000030)
-R_BW_32(MX6_IOM_GRP_B6DS, 0x00000030)
-R_BW_32(MX6_IOM_GRP_B7DS, 0x00000030)
-
-DATA 4, MX6_IOM_GRP_ADDDS, 0x00000030
-/* 40 Ohm drive strength for cs0/1,sdba2,cke0/1,sdwe */
-DATA 4, MX6_IOM_GRP_CTLDS, 0x00000030
-
-DATA 4, MX6_IOM_DRAM_DQM0, 0x00020030
-DATA 4, MX6_IOM_DRAM_DQM1, 0x00020030
-R_BW_32(MX6_IOM_DRAM_DQM2, 0x00020030)
-R_BW_32(MX6_IOM_DRAM_DQM3, 0x00020030)
-R_BW_32(MX6_IOM_DRAM_DQM4, 0x00020030)
-R_BW_32(MX6_IOM_DRAM_DQM5, 0x00020030)
-R_BW_32(MX6_IOM_DRAM_DQM6, 0x00020030)
-R_BW_32(MX6_IOM_DRAM_DQM7, 0x00020030)
-
-DATA 4, MX6_IOM_DRAM_CAS, 0x00020030
-DATA 4, MX6_IOM_DRAM_RAS, 0x00020030
-DATA 4, MX6_IOM_DRAM_SDCLK_0, 0x00020030
-R_BW_32(MX6_IOM_DRAM_SDCLK_1, 0x00020030)
+#if CONFIG_DDR_DRIVE_STRENGTH==5
+#define DRIVE_STRENGTH 0x00000028
+#define DRIVE_STRENGTH_I 0x00020028
+#define DRIVE_STRENGTH_ODT_6 0x00003028
+#define DRIVE_STRENGTH_RESET_6ULL 0x000c0028
+#elif CONFIG_DDR_DRIVE_STRENGTH==6
+#define DRIVE_STRENGTH 0x00000030
+#define DRIVE_STRENGTH_I 0x00020030
+#define DRIVE_STRENGTH_ODT_6 0x00003030
+#define DRIVE_STRENGTH_RESET_6ULL 0x000c0030
+#elif CONFIG_DDR_DRIVE_STRENGTH==7
+#define DRIVE_STRENGTH 0x00000038
+#define DRIVE_STRENGTH_I 0x00020038
+#define DRIVE_STRENGTH_ODT_6 0x00003038
+#define DRIVE_STRENGTH_RESET_6ULL 0x000c0038
+#endif
 
 #ifdef CONFIG_MX6ULL
-DATA 4, MX6_IOM_DRAM_RESET, 0x000c0030
-DATA 4, MX6_IOM_DRAM_SDODT0, 0x00000030
-DATA 4, MX6_IOM_DRAM_SDODT1, 0x00000030
+#define DRIVE_STRENGTH_ODT	DRIVE_STRENGTH
+#define DRIVE_STRENGTH_RESET	DRIVE_STRENGTH_RESET_6ULL
 #else
-DATA 4, MX6_IOM_DRAM_RESET, 0x00020030
-DATA 4, MX6_IOM_DRAM_SDODT0, 0x00003030
-DATA 4, MX6_IOM_DRAM_SDODT1, 0x00003030
+#define DRIVE_STRENGTH_ODT	DRIVE_STRENGTH_ODT_6
+#define DRIVE_STRENGTH_RESET	DRIVE_STRENGTH_I
 #endif
+
+
+DATA 4, MX6_IOM_DRAM_SDQS0, DRIVE_STRENGTH
+DATA 4, MX6_IOM_DRAM_SDQS1, DRIVE_STRENGTH
+R_BW_32(MX6_IOM_DRAM_SDQS2, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_DRAM_SDQS3, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_DRAM_SDQS4, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_DRAM_SDQS5, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_DRAM_SDQS6, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_DRAM_SDQS7, DRIVE_STRENGTH)
+
+DATA 4, MX6_IOM_GRP_B0DS, DRIVE_STRENGTH
+DATA 4, MX6_IOM_GRP_B1DS, DRIVE_STRENGTH
+R_BW_32(MX6_IOM_GRP_B2DS, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_GRP_B3DS, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_GRP_B4DS, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_GRP_B5DS, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_GRP_B6DS, DRIVE_STRENGTH)
+R_BW_32(MX6_IOM_GRP_B7DS, DRIVE_STRENGTH)
+
+DATA 4, MX6_IOM_GRP_ADDDS, DRIVE_STRENGTH
+/* 40 Ohm drive strength for cs0/1,sdba2,cke0/1,sdwe */
+DATA 4, MX6_IOM_GRP_CTLDS, DRIVE_STRENGTH
+
+DATA 4, MX6_IOM_DRAM_DQM0, DRIVE_STRENGTH_I
+DATA 4, MX6_IOM_DRAM_DQM1, DRIVE_STRENGTH_I
+R_BW_32(MX6_IOM_DRAM_DQM2, DRIVE_STRENGTH_I)
+R_BW_32(MX6_IOM_DRAM_DQM3, DRIVE_STRENGTH_I)
+R_BW_32(MX6_IOM_DRAM_DQM4, DRIVE_STRENGTH_I)
+R_BW_32(MX6_IOM_DRAM_DQM5, DRIVE_STRENGTH_I)
+R_BW_32(MX6_IOM_DRAM_DQM6, DRIVE_STRENGTH_I)
+R_BW_32(MX6_IOM_DRAM_DQM7, DRIVE_STRENGTH_I)
+
+DATA 4, MX6_IOM_DRAM_CAS, DRIVE_STRENGTH_I
+DATA 4, MX6_IOM_DRAM_RAS, DRIVE_STRENGTH_I
+DATA 4, MX6_IOM_DRAM_SDCLK_0, DRIVE_STRENGTH_I
+R_BW_32(MX6_IOM_DRAM_SDCLK_1, DRIVE_STRENGTH_I)
+
+DATA 4, MX6_IOM_DRAM_RESET, DRIVE_STRENGTH_RESET
+DATA 4, MX6_IOM_DRAM_SDODT0, DRIVE_STRENGTH_ODT
+DATA 4, MX6_IOM_DRAM_SDODT1, DRIVE_STRENGTH_ODT
 DATA 4, MX6_IOM_DRAM_SDCKE0, 0x00003000
 DATA 4, MX6_IOM_DRAM_SDCKE1, 0x00003000
 
