boundary: common: default to FEC_RESET_PULLUP for IMX8MP
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/board/boundary/common/Kconfig
+++ b/board/boundary/common/Kconfig
@@ -35,6 +35,7 @@ config BQ25898
 
 config FEC_RESET_PULLUP
 	bool "fec pullup on reset"
+	default y if IMX8MP
 	default y if IMX8MM
 	default y if IMX8MN
 	default y if TARGET_NITROGEN7
