son: add CONFIG_VIDEO_BLANK_BEFORE_OFF=y to fix linux display trouble
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/configs/son_2g_defconfig
+++ b/configs/son_2g_defconfig
@@ -150,6 +150,7 @@ CONFIG_USB_ETHER_MCS7830=y
 CONFIG_USB_ETHER_SMSC95XX=y
 CONFIG_DM_VIDEO=y
 CONFIG_SYS_WHITE_ON_BLACK=y
+CONFIG_VIDEO_BLANK_BEFORE_OFF=y
 CONFIG_PANEL_MIPI_SIMPLE=y
 CONFIG_VIDEO_LT8912=y
 CONFIG_VIDEO_SN65DSI83=y
