--- a/configs/nitrogen8m_2g_defconfig
+++ b/configs/nitrogen8m_2g_defconfig
@@ -34,7 +34,7 @@ CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_LEGACY_IMAGE_FORMAT=y
 CONFIG_OF_SYSTEM_SETUP=y
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg,DDR_MB=2048,DEFCONFIG=\"nitrogen8m\""
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage.cfg,DDR_MB=2048,DEFCONFIG=\"nitrogen8m_2g\""
 CONFIG_USE_PREBOOT=y
 CONFIG_PREBOOT=""
 CONFIG_SYS_CONSOLE_OVERWRITE_ROUTINE=y
