--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -761,6 +761,7 @@ dtb-$(CONFIG_ARCH_IMX8) += \
 	imx8-giedi.dtb
 
 dtb-$(CONFIG_ARCH_IMX8M) += \
+	imx8mm-ash8mm.dtb \
 	imx8mm-c2.dtb \
 	imx8mm-c2-mid.dtb \
 	imx8mm-dwe.dtb \
