--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -562,6 +562,11 @@ config DISPLAY
 	   The devices provide a simple interface to start up the display,
 	   read display information and enable it.
 
+config DISPLAY_DETECT
+	bool "Enable Display Detection support"
+	depends on DISPLAY
+	default n
+
 config NXP_TDA19988
 	bool "Enable NXP TDA19988 support"
 	depends on DISPLAY
