--- a/drivers/video/imx/Kconfig
+++ b/drivers/video/imx/Kconfig
@@ -95,6 +95,7 @@ config VIDEO_IMX8MP_HDMI
 	select IMX8MP_HDMI_PAVI
 	select RESET_IMX_HDMIMIX
 	select DISPLAY
+	select DISPLAY_DETECT
 	help
 	  Support for i.MX8MP HDMI controller.
 
